automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -245,13 +245,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "countries"
+    "countries.append('Malta')"
    ]
   },
   {
