automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
    },
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append('Thaila')"
    ]
   },
   {
